--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="black">#ff000000</color>
     <color name="white">#ffffffff</color>
     <color name="red">#ffff0000</color>
+    <color name="green">#ff00ff00</color>
     <color name="primaryColor">#ff00429d</color>
     <color name="primaryLightColor">#ff506ccf</color>
     <color name="primaryDarkColor">#ff001d6e</color>
