--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="event_types">
-        <item>ДЗ</item>
         <item>ЛР</item>
         <item>РК</item>
+        <item>ДЗ</item>
+    </string-array>
+    <string-array name="modules">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
     </string-array>
 </resources>
