--- a/app/src/main/res/layout/dialog_fragment_module_info_editing.xml
+++ b/app/src/main/res/layout/dialog_fragment_module_info_editing.xml
@@ -6,21 +6,23 @@
     android:paddingLeft="32dp"
     android:paddingRight="32dp">
 
-    <CheckBox
-        android:id="@+id/studentLessonIsAttended"
-        android:layout_width="wrap_content"
+    <EditText
+        android:id="@+id/moduleInfoMinPointsEditing"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="@string/is_attended_text"
-        android:textSize="18sp" />
+        android:hint="@string/min_points_text"
+        android:inputType="number"
+        android:maxLength="2"
+        android:textSize="20sp" />
 
     <EditText
-        android:id="@+id/studentLessonBonusPoints"
+        android:id="@+id/moduleInfoMaxPointsEditing"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:gravity="center"
-        android:hint="@string/bonus_points_text"
+        android:hint="@string/max_points_text"
         android:inputType="number"
         android:maxLength="2"
         android:textSize="20sp" />
