--- a/app/src/main/res/layout/dialog_fragment_subject_info_adding.xml
+++ b/app/src/main/res/layout/dialog_fragment_subject_info_adding.xml
@@ -7,16 +7,24 @@
     android:paddingRight="32dp">
 
     <CheckBox
-        android:id="@+id/isLecturer"
+        android:id="@+id/subjectInfoIsLecturerAdding"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
         android:gravity="center"
         android:text="@string/is_lecturer_text"
         android:textSize="18sp" />
 
     <CheckBox
-        android:id="@+id/isExam"
+        android:id="@+id/subjectInfoIsSeminarianAdding"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
+        android:gravity="center"
+        android:text="@string/is_seminarian_text"
+        android:textSize="18sp" />
+
+    <CheckBox
+        android:id="@+id/subjectInfoIsExamAdding"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
@@ -24,4 +32,12 @@
         android:text="@string/is_exam_text"
         android:textSize="18sp" />
 
+    <CheckBox
+        android:id="@+id/subjectInfoIsDifferentiatedCreditAdding"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
+        android:gravity="center"
+        android:text="@string/is_differentiated_credit_text"
+        android:textSize="18sp" />
 </LinearLayout>
