--- a/app/src/main/res/layout/dialog_fragment_lesson_editing.xml
+++ b/app/src/main/res/layout/dialog_fragment_lesson_editing.xml
@@ -2,31 +2,37 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingLeft="32dp"
+    android:paddingRight="32dp">
 
-    <LinearLayout
+    <EditText
+        android:id="@+id/lessonDateAndTimeEditing"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingStart="32dp"
-        android:paddingEnd="32dp">
+        android:gravity="center"
+        android:hint="@string/lesson_date_time_text"
+        android:inputType="date"
+        android:maxLength="10"
+        android:textSize="20sp" />
 
-        <TextView
-            android:id="@+id/lessonAttendPointsTextEditing"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="4dp"
-            android:layout_weight="3"
-            android:text="@string/lesson_attend_points_text"
-            android:textSize="20sp" />
+    <CheckBox
+        android:id="@+id/lessonIsLectureEditing"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
+        android:gravity="center"
+        android:text="@string/is_lecture_text"
+        android:textSize="18sp" />
 
-        <EditText
-            android:id="@+id/lessonAttendPointsEditing"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:layout_weight="1"
-            android:inputType="number"
-            android:textSize="20sp" />
-    </LinearLayout>
+    <EditText
+        android:id="@+id/lessonPointsPerVisitEditing"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:gravity="center"
+        android:hint="@string/lesson_attend_points_text"
+        android:inputType="number"
+        android:maxLength="2"
+        android:textSize="20sp" />
 </LinearLayout>
