--- a/app/src/main/res/layout/dialog_fragment_student_adding.xml
+++ b/app/src/main/res/layout/dialog_fragment_student_adding.xml
@@ -42,7 +42,7 @@
         android:layout_marginTop="4dp"
         android:gravity="center"
         android:hint="@string/password_form"
-        android:inputType="text"
+        android:inputType="textVisiblePassword"
         android:textSize="20sp" />
 
     <CheckBox
