--- a/app/src/main/res/layout/holder_module_performance.xml
+++ b/app/src/main/res/layout/holder_module_performance.xml
@@ -21,11 +21,19 @@
             android:paddingEnd="8dp">
 
             <TextView
-                android:id="@+id/moduleTitle"
-                android:layout_width="0dp"
+                android:id="@+id/moduleTitleWithPoints"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginStart="20dp"
-                android:layout_weight="1"
+                android:textSize="25sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/earnedModulePoints"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginStart="20dp"
+                android:gravity="right"
                 android:textSize="25sp"
                 android:textStyle="bold" />
         </LinearLayout>
