--- a/app/src/main/res/layout/dialog_fragment_event_editing.xml
+++ b/app/src/main/res/layout/dialog_fragment_event_editing.xml
@@ -59,4 +59,16 @@
         android:inputType="number"
         android:maxLength="2"
         android:textSize="20sp" />
+
+    <Button
+        android:id="@+id/eventAddVisitsForStudents"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="4dp"
+        android:backgroundTint="@color/secondaryColor"
+        android:text="@string/add_visits_for_students_text"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="13sp" />
 </LinearLayout>
